# awald-core

./: .cargo-audit.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml
.cargo/: audit-ignore.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  security-audit.yml
benches/: slice_bench.rs
crates/awald-data/: Cargo.toml
crates/awald-data/benches/: slice_bench.rs
crates/awald-data/src/: error.rs  formats.rs  lib.rs  slice.rs  store.rs  summary.rs
crates/awald-engine/: Cargo.toml
crates/awald-engine/src/: capture.rs  error.rs  executor.rs  lib.rs
crates/awald-session/: Cargo.toml
crates/awald-session/src/: error.rs  lib.rs  session.rs
docs/: CONTRIBUTING.md  PRE_COMMIT.md  TODO.md
scripts/: cargo-audit.sh
tests/integration/: session_tests.rs
