[package]
name        = "awald-data"
description = "Polars-backed dataset store for Awald — zero-copy viewport slicing"
keywords    = ["polars", "dataframe", "statistics", "econometrics"]
categories  = ["science", "data-structures"]

version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
polars      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
insta       = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }
tempfile    = { workspace = true }
criterion    = { workspace = true }

[[bench]]
name    = "slice_bench"
harness = false
